DuPont DevSB/src/objects/ccrz__E_StoredPayment__c.object
<CustomObject>
    <description>The stored payment object is used to store saved or walleted payment information.</description>
    <fields>
        <fullName>ccrz__AccountAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if this payment method is available to all users within an Account.</description>
        <label>Account Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__AccountNumber__c</fullName>
        <description>The Account Number of the payment method. For credit cards this would be the final 4 digits.</description>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AccountType__c</fullName>
        <description>The Account Type of the Stored Payment such as Credit Card, PO Number, etc.  Should match the corresponding account type as setup in page configuration.</description>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account for which the Stored Payment is Available</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC Stored Payments</relationshipLabel>
        <relationshipName>CC_Stored_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address associated with this payment.</description>
        <label>Address</label>
        <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
        <relationshipLabel>CC Stored Payments</relationshipLabel>
        <relationshipName>StoredPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not Currently Used.</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>The user entered name of the stored payment.</description>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__EffectiveAccountID__c</fullName>
        <description>Holds the effective account for this Stored Payment. This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</description>
        <inlineHelpText>This field will be utilized in implementations where a user can order for multiple accounts inclusive or exclusive of their own. The effective account is used to control the entitlements, pricing, integrations etc that drive the site experience.</inlineHelpText>
        <label>Effective Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enabled Flag</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <description>End Date after which a Stored Payment will no longer be available.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ExpMonth__c</fullName>
        <description>The expiration month of the Stored Payment. Zero Based, e. g. January = 0.</description>
        <label>Exp Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ExpYear__c</fullName>
        <description>The expiration year of the Stored Payment.</description>
        <label>Exp Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Name__c</fullName>
        <description>CCSP-{00000000}</description>
        <displayFormat>CCSP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__PaymentType__c</fullName>
        <description>Specific sub-type of the Stored Payment, for example, for Credit Cards this would be the card type.</description>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator if the user can edit/create/delete the Stored Payment.</description>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Ordering of the Stored Payments.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <description>Start Date that a Stored Payment will be Available.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__StoredPaymentId__c</fullName>
        <description>External ID For Stored Payments.  Not used by CloudCraze.</description>
        <externalId>true</externalId>
        <label>Stored Payment Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>The Storefront associated with this Stored Payment.</description>
        <label>Storefront</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SubaccountNumber__c</fullName>
        <description>Sub-account number.</description>
        <label>Subaccount Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Token__c</fullName>
        <description>Tokenized form of the payment method</description>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User for which the Stored Payment is available.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CC_Stored_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Stored Payment</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CC Stored Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Stored Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>